--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -19,46 +19,9 @@
                     </svg>
                 </button>
             </div>
-            <div *ngFor="let todo of todos">
-                <div *ngIf="this.todo.category == 'toDo'" class="taskContainer" draggable="true">
-                    <div class="tagContainer">{{this.todo.tag}}</div>
-                    <div class="textTask">
-                        <h3>{{this.todo.title}}</h3>
-                        <span>{{this.todo.text}}.</span>
-                    </div>
-                    <div *ngIf="this.todo.stateNow > 0" class="statusContainer">
-                        <div class="progressBar">
-                            <div class="progressStateNow" style="width: calc(100%/{{this.todo.stateTotal}}*{{this.todo.stateNow}});"></div>
-                        </div>
-                        <span>{{this.todo.stateNow}}/{{this.todo.stateTotal}} Done</span>
-                    </div>
-                    <div class="contactSection">
-                        <div class="contacts">
-                            <div *ngFor="let contactName of this.todo.contacts.names;  index as i">
-                                <div *ngIf="this.todo.contacts.names.length <= 3 " class="contactIcon" style="background-color: {{this.todo.contacts.colors[i]}};"> {{contactName}}</div>
-                                <div *ngIf="i < 2 && this.todo.contacts.names.length > 3" class="contactIcon" style="background-color: {{this.todo.contacts.colors[i]}};">{{contactName}}</div>
-                            </div>
-                            <div *ngIf="this.todo.contacts.names.length >= 4" class="moreContactsIcon">+{{this.todo.contacts.names.length-2}}</div>
-                        </div>
-
-                        <img src=" ../../assets/img/{{this.todo.priority}}.png ">
-                    </div>
-                </div>
-                <div class="marginContainer"></div>
-            </div>
-        </div>
-        <div class="middleSectionBoard">
-            <div class="secondTitle">
-                <h2>In progress</h2>
-                <button class="testButton"><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M9 1.5V16.5"  stroke-width="2" stroke-linecap="round"/>
-                    <path d="M16.5 9.14148L1.5 9.14148"  stroke-width="2" stroke-linecap="round"/>
-                    </svg>
-                </button>
-            </div>
-            <div>
-                <div *ngFor="let todo of todos">
-                    <div *ngIf="this.todo.category == 'inProgress'" class="taskContainer" draggable="true">
+            <div class="dropContainer" (drop)="moveTo('toDo')" (dragover)="allowDrop($event)">
+                <div id="toDo" *ngFor="let todo of todos">
+                    <div *ngIf="this.todo.category == 'toDo'" class="taskContainer" draggable="true" (dragstart)="testManuel(this.todo.id)">
                         <div class="tagContainer">{{this.todo.tag}}</div>
                         <div class="textTask">
                             <h3>{{this.todo.title}}</h3>
@@ -82,9 +45,49 @@
                             <img src=" ../../assets/img/{{this.todo.priority}}.png ">
                         </div>
                     </div>
-                    <div class="marginContainer"></div>
                 </div>
+                <div class="marginContainer"></div>
             </div>
+        </div>
+        <div class="middleSectionBoard">
+            <div class="secondTitle">
+                <h2>In progress</h2>
+                <button class="testButton"><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 1.5V16.5"  stroke-width="2" stroke-linecap="round"/>
+                    <path d="M16.5 9.14148L1.5 9.14148"  stroke-width="2" stroke-linecap="round"/>
+                    </svg>
+                </button>
+            </div>
+            <div class="dropContainer" (drop)="moveTo('inProgress')" (dragover)="allowDrop($event)">
+                <div id="inProgress" *ngFor="let todo of todos">
+                    <div *ngIf="this.todo.category == 'inProgress'" class="taskContainer" draggable="true" (dragstart)="testManuel(this.todo.id)">
+                        <div class="tagContainer">{{this.todo.tag}}</div>
+                        <div class="textTask">
+                            <h3>{{this.todo.title}}</h3>
+                            <span>{{this.todo.text}}.</span>
+                        </div>
+                        <div *ngIf="this.todo.stateNow > 0" class="statusContainer">
+                            <div class="progressBar">
+                                <div class="progressStateNow" style="width: calc(100%/{{this.todo.stateTotal}}*{{this.todo.stateNow}});"></div>
+                            </div>
+                            <span>{{this.todo.stateNow}}/{{this.todo.stateTotal}} Done</span>
+                        </div>
+                        <div class="contactSection">
+                            <div class="contacts">
+                                <div *ngFor="let contactName of this.todo.contacts.names;  index as i">
+                                    <div *ngIf="this.todo.contacts.names.length <= 3 " class="contactIcon" style="background-color: {{this.todo.contacts.colors[i]}};"> {{contactName}}</div>
+                                    <div *ngIf="i < 2 && this.todo.contacts.names.length > 3" class="contactIcon" style="background-color: {{this.todo.contacts.colors[i]}};">{{contactName}}</div>
+                                </div>
+                                <div *ngIf="this.todo.contacts.names.length >= 4" class="moreContactsIcon">+{{this.todo.contacts.names.length-2}}</div>
+                            </div>
+
+                            <img src=" ../../assets/img/{{this.todo.priority}}.png ">
+                        </div>
+                    </div>
+                </div>
+                <div class="marginContainer"></div>
+            </div>
+
         </div>
         <div class="middleSectionBoard">
             <div class="secondTitle">
