--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -20,6 +20,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    margin-top: 82px;
     .titleRightSection {
         display: flex;
         justify-content: space-between;
