add dialog add contact component

--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -63,11 +63,11 @@
             </div>
         </div>
     </div>
-    <div class="buttons">
+    <!-- <div class="buttons">
         <button class="firstButton">
             Clear
             <mat-icon aria-hidden="true" fontIcon="close"></mat-icon>
         </button>
         <button class="secondButton">Create Task <mat-icon aria-hidden="true" fontIcon="done"></mat-icon></button>
-    </div>
+    </div> -->
 </div>
