--- a/src/app/dialog-add-contact/dialog-add-contact.component.html
+++ b/src/app/dialog-add-contact/dialog-add-contact.component.html
@@ -13,11 +13,11 @@
         <img src="../../assets/img/contact.png">
     </div>
     <form class="formContainer" (submit)="saveContact()">
-        <input class="inputName" placeholder="Name" type="text" [(ngModel)]="contact.firstName" name="firstName" autocomplete="false">
-        <input class="inputMail" placeholder="Email" type="email" [(ngModel)]="contact.mail">
-        <input class="inputPhone" placeholder="Phone" type="tel" [(ngModel)]="contact.phone">
+        <input class="inputName" placeholder="Name" type="text" [(ngModel)]="contact.firstName" name="firstName">
+        <input class="inputMail" placeholder="Email" type="email" [(ngModel)]="contact.mail" name="mail">
+        <input class="inputPhone" placeholder="Phone" type="tel" [(ngModel)]="contact.phone" name="phone">
         <div>
-            <button class="cancelButton">
+            <button class="cancelButton" (click)="onNoClick()">
                 <span>Cancel</span>
 
                 <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
